headers/ox-block.h

struct nvm_ppa_addr {
    /* Generic structure for all addresses */
    union {
        struct {
            uint64_t sec   : 3;
            uint64_t pl    : 2;
            uint64_t ch    : 12;
            uint64_t lun   : 6;
            uint64_t pg    : 12;
            uint64_t blk   : 15;
            uint64_t rsv   : 14;
        } g;

        uint64_t ppa;
    };
};
struct nvm_mmgr_geometry {
    uint8_t     n_of_ch;
    uint8_t     lun_per_ch;
    uint16_t    blk_per_lun;
    uint16_t    pg_per_blk;
    uint16_t    sec_per_pg;
    uint8_t     n_of_planes;
    uint32_t    pg_size;
    uint32_t    sec_oob_sz;

    /* calculated values */
    uint32_t    sec_per_pl_pg;
    uint32_t    sec_per_blk;
    uint32_t    sec_per_lun;
    uint32_t    sec_per_ch;
    uint32_t    pg_per_lun;
    uint32_t    pg_per_ch;
    uint32_t    blk_per_ch;
    uint64_t    tot_sec;
    uint64_t    tot_pg;
    uint32_t    tot_blk;
    uint32_t    tot_lun;
    uint32_t    sec_size;
    uint32_t    pl_pg_size;
    uint32_t    blk_size;
    uint64_t    lun_size;
    uint64_t    ch_size;
    uint64_t    tot_size;
    uint32_t    pg_oob_sz;
    uint32_t    pl_pg_oob_sz;
    uint32_t    blk_oob_sz;
    uint32_t    lun_oob_sz;
    uint64_t    ch_oob_sz;
    uint64_t    tot_oob_sz;
};
struct nvm_mmgr;
struct nvm_channel;
struct nvm_mmgr {
    const char                  *name;
    struct nvm_mmgr_ops         *ops;
    struct nvm_mmgr_geometry    *geometry;
    struct nvm_channel          *ch_info;
    uint8_t                     flags;
};
struct nvm_channel {
    uint16_t                    ch_id;
    uint16_t                    ch_mmgr_id;
    uint64_t                    ns_pgs;
    uint64_t                    slba;
    uint64_t                    elba;
    uint64_t                    tot_bytes;
    uint16_t                    mmgr_rsv; /* number of blks reserved by mmgr */
    uint16_t                    ftl_rsv;  /* number of blks reserved by ftl */
    struct nvm_mmgr             *mmgr;
    struct nvm_ftl              *ftl;
    struct nvm_mmgr_geometry    *geometry;
    struct nvm_ppa_addr         mmgr_rsv_list[16]; /* list of mmgr rsvd blks */
    struct nvm_ppa_addr         ftl_rsv_list[16];  /* list of ftl rsvd blks */
    //LIST_ENTRY(nvm_channel)     entry;
    union {
        struct {
            uint64_t   ns_id         :16;
            uint64_t   ns_part       :32;
            uint64_t   ftl_id        :8;
            uint64_t   in_use        :8;
        } i;
        uint64_t       nvm_info;
    };
};