src/generated_bindings/volt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VoltCh"][::core::mem::size_of::<VoltCh>() - 8usize];
    ["Alignment of VoltCh"][::core::mem::align_of::<VoltCh>() - 8usize];
    ["Offset of field: VoltCh::lun_offset"][::core::mem::offset_of!(VoltCh, lun_offset) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltCtrl {
    pub status: VoltStatus,
    pub blocks: *mut VoltBlock,
    pub luns: *mut VoltLun,
    pub channels: *mut VoltCh,
    pub edma: *mut u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VoltCtrl"][::core::mem::size_of::<VoltCtrl>() - 48usize];
    ["Alignment of VoltCtrl"][::core::mem::align_of::<VoltCtrl>() - 8usize];
    ["Offset of field: VoltCtrl::status"][::core::mem::offset_of!(VoltCtrl, status) - 0usize];
    ["Offset of field: VoltCtrl::blocks"][::core::mem::offset_of!(VoltCtrl, blocks) - 16usize];
    ["Offset of field: VoltCtrl::luns"][::core::mem::offset_of!(VoltCtrl, luns) - 24usize];
    ["Offset of field: VoltCtrl::channels"][::core::mem::offset_of!(VoltCtrl, channels) - 32usize];
    ["Offset of field: VoltCtrl::edma"][::core::mem::offset_of!(VoltCtrl, edma) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct volt_dma {
    pub virt_addr: *mut u8,
    pub prp_index: u32,
    pub status: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of volt_dma"][::core::mem::size_of::<volt_dma>() - 16usize];
    ["Alignment of volt_dma"][::core::mem::align_of::<volt_dma>() - 8usize];
    ["Offset of field: volt_dma::virt_addr"][::core::mem::offset_of!(volt_dma, virt_addr) - 0usize];
    ["Offset of field: volt_dma::prp_index"][::core::mem::offset_of!(volt_dma, prp_index) - 8usize];
    ["Offset of field: volt_dma::status"][::core::mem::offset_of!(volt_dma, status) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct volt_info {
    pub channel_array: *mut nvm_channel,
    pub n_channels: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of volt_info"][::core::mem::size_of::<volt_info>() - 16usize];
    ["Alignment of volt_info"][::core::mem::align_of::<volt_info>() - 8usize];
    ["Offset of field: volt_info::channel_array"]
        [::core::mem::offset_of!(volt_info, channel_array) - 0usize];
    ["Offset of field: volt_info::n_channels"]
        [::core::mem::offset_of!(volt_info, n_channels) - 8usize];
};
unsafe extern "C" {
    pub fn volt_get_ch_info(ch_info: *mut volt_info) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn volt_get_geometry(g: *mut nvm_mmgr_geometry) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn volt_get_last_address(ptr: *mut ::core::ffi::c_void) -> ::core::ffi::c_int;
}
pub type __builtin_va_list = *mut ::core::ffi::c_char;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_ftl {
    pub _address: u8,
}
